--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -21,6 +21,11 @@
                     <% }); %>
                 </ul>
                 <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                    <button class="btn" type="submit">Order Now!</button>
+                    </form>
+                </div>
 
             <% } else {%>
                 <h1>Your cart is empty.</h1>
